@@ -1,4 +1,7 @@
 
+2009-03-11 20:38 Ali aliov@xfce.org 
+	 * : Implement critical battery level settings+the option to disable lock screen when suspend/hibernate
+
 2009-03-11 13:33 Ali aliov@xfce.org 
 	 * : Set dpms to standby or suspend depending on the user settings
 
